Include producer to send email
